src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.light {
  .home-gradient{
    background: linear-gradient(180deg, #ffffff 0%, #7ec8f5 100%);
  }
  --color-background: #ffffff;
  --color-mobileBackground: #ffffff;
  --color-navbar: #ffffff;
  --color-navbar-text: #015186;
  --color-navbar-bg: rgba(255, 255, 255, 0.9);
  --color-primary: #015186;
  --color-primary-rgb: 1, 81, 134;
  --color-accent: #7ec8f5;
  --color-results-text: #015186;
  --color-results-bg: #e4f4fb;
  --color-footer: #015186;
  --color-text: #000000;
  --color-border: var(--color-primary);
  --color-button-bg: #ff5800;
  --color-button-text: #ffffff;
  --color-button-border: var(--color-primary);
  --color-button-shadow: var(--color-primary);
  --color-contactWithUs: #ff5800;
  --color-contact-background: #FFE0D0;
  --color-black-white: #000000;
}

.dark {
  .home-gradient{
    background: var(--color-background);
  }
  --color-background: #031f30;
  --color-mobileBackground: #021c29;
  --color-navbar: #01121a;
  --color-navbar-text: #ffffff;
  --color-navbar-bg: rgba(13, 13, 13, 0.6);
  --color-primary: #ff5800;
  --color-accent: #015186;
  --color-results-text: #000000;
  --color-results-bg: #FCD8B5;
  --color-footer: #053350;
  --color-text: #ffffff;
  --color-border: var(--color-accent);
  --color-button-bg: #ffffff;
  --color-button-text: #000000;
  --color-button-border: var(--color-primary);
  --color-button-shadow: var(--color-primary);
  --color-contactWithUs: #ff5800;
  --color-contact-background: #3B2C26;
  --color-black-white: #ffffff;
}

html, body {
  scroll-behavior: smooth;
  overflow-x: hidden;
  transition: background-color 0.5s ease, color 0.5s ease;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.animate-fade-in {
  animation: fadeIn 1s ease-in-out forwards;
}

